--- a/public/style.css
+++ b/public/style.css
@@ -105,6 +105,7 @@ body {
     "uno dos tres";
   margin-bottom: 1em;
   padding: 1em;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /*Add planta*/
@@ -136,28 +137,39 @@ body {
   flex-direction: column;
   border-radius: 1em;
   border: solid lightgray 0.1em;
-  max-width: 43.5%;
-  max-height: 100%;
-  flex-direction: column;
-  text-align: center;
-  justify-content: space-evenly;
+  width: 20em;
+  height: 25em;
+  margin: 0.5em;
   padding: 1em;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.plantaTarjeta form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .plantaTarjeta select {
-    margin-top: 1em;
-    border: solid 0.1em #9be09b;
-    border-radius: 0.5em;
-    height: 2em;
-    width: 20em;
+  margin-top: 1em;
+  border: solid 0.1em #9be09b;
+  border-radius: 0.5em;
+  height: 2em;
+  width: 20em;
+  box-sizing: border-box;
 }
 
 .plantaTarjeta input {
-    margin-top: 1em;
-    border: solid 0.1em #9be09b;
-    border-radius: 0.5em;
-    height: 2em;
-    width: 20em;
+  margin-top: 1em;
+  border: solid 0.1em #9be09b;
+  border-radius: 0.5em;
+  height: 2em;
+  width: 20em;
+  box-sizing: border-box;
 }
 
 .plantaTarjeta button {
@@ -170,4 +182,17 @@ body {
     font-weight: 600;
     align-self: center;
     font-size: 0.8em;
+}
+
+.plantaContenido {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.imgPlanta {
+  height: 10em;
+  object-fit: contain;
+  margin: 0 auto;
 }
