Inicio de el sistema de regado, actualización de la base de datos para contener los datos de riego

--- a/public/style.css
+++ b/public/style.css
@@ -191,6 +191,12 @@ body {
   justify-content: space-around;
 }
 
+.plantaContenido p{
+  margin: 0em;
+  padding: 0em;
+}
+
+
 .imgPlanta {
   height: 10em;
   object-fit: contain;
